Geometry Nodes: Copy-Paste for vector affects source property #108096

Closed
opened 2023-05-20 07:11:51 +02:00 by Vyacheslav Kobozev · 6 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95

Blender Version
Broken versions: Curent main.
Worked versions: never

Short description of error
As title say. You can see how it happens. When I press Ctrl+Alt+C I copy vector,
But then, when I press Ctrl+Alt+V over another vector, it changes donor`s field according same field, that i hovering with mouse. 4exmpl i hover Z value and Z value on the donor adds itself
2023-05-20_08-07-15.mp4

Exact steps for others to reproduce the error

  1. Go to geometry nodes editor.
  2. Add vector input nodes.
  3. Copy value from one to other.
    Noticed, some time source node can be changed.
**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95 **Blender Version** Broken versions: Curent main. Worked versions: never **Short description of error** As title say. You can see how it happens. When I press Ctrl+Alt+C I copy vector, But then, when I press Ctrl+Alt+V over another vector, it changes donor`s field according same field, that i hovering with mouse. 4exmpl i hover Z value and Z value on the donor adds itself [2023-05-20_08-07-15.mp4](/attachments/4dab620f-b469-43c8-85a8-3c313f5d7ec2) **Exact steps for others to reproduce the error** 1. Go to geometry nodes editor. 2. Add vector input nodes. 3. Copy value from one to other. Noticed, some time source node can be changed.
Vyacheslav Kobozev added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2023-05-20 07:11:52 +02:00

3.5.1, 6ee8aa4997ee, 2023-04-25 13:50 broken too for me.

3.5.1, `6ee8aa4997ee`, 2023-04-25 13:50 broken too for me.
Vyacheslav Kobozev changed title from Copying vector changes donor vector (Ctrl Alt C/V trick) to Copying vector (geonodes) changes donor vector (Ctrl Alt C/V trick) 2023-05-20 07:15:10 +02:00

btw this vector copy do not work at all with shades nodes.

btw this vector copy do not work at all with shades nodes.

more weird things with shader vector add…
Something messed a lot under the hood

more weird things with shader vector add… Something messed a lot under the hood
Iliya Katushenock added the
Interest
Geometry Nodes
label 2023-05-20 09:43:36 +02:00
Iliya Katushenock changed title from Copying vector (geonodes) changes donor vector (Ctrl Alt C/V trick) to Geometry Nodes: Copy-Paste for vector is affected source property 2023-05-20 09:45:04 +02:00
Vyacheslav Kobozev changed title from Geometry Nodes: Copy-Paste for vector is affected source property to Geometry Nodes: Copy-Paste for vector affects source property 2023-05-20 10:03:32 +02:00
Member

Will look into this

Will look into this
Philipp Oeser self-assigned this 2023-05-25 09:55:27 +02:00
Member

btw this vector copy do not work at all with shades nodes.

This is because the default VectorBuilder has PropertySubType subtype = PROP_NONE and then ui_but_has_array_value fails. I have asked around if we can change it to PROP_XYZ by default, it would all work fine then (if this cant be the default, we would need to go in and change it for many, many nodes -- but that would also work, and might be a bit more precise since some are these can be PROP_DIRECTION, PROP_TRANSLATION, ...)
To not make this a "dupli-report" with multiple issues, it would probably be best to report this separately though (you can already subscribe/ping me there if you do so since I have the possible fix ready).

The original issue (source property affected) is caused by the fact that holding ALT will trigger the behavior of "multi-button-editing" (so it tries to copy the value - with offset - to other selected nodes), this should of course not happen on pasting, fix for that is incoming...

more weird things with shader vector add…
Something messed a lot under the hood

This has the same reasons ("multi-button-editing" falsely triggered), the difference in your video is not blender versions but the fact that in 3.3.6 you have the node on the right hand side selected [so no node to copy to], in 3.6 you have the node on the left hand side selected [then the copying takes place]

> btw this vector copy do not work at all with shades nodes. This is because the default VectorBuilder has `PropertySubType subtype = PROP_NONE` and then `ui_but_has_array_value` fails. I have asked around if we can change it to PROP_XYZ by default, it would all work fine then (if this cant be the default, we would need to go in and change it for many, many nodes -- but that would also work, and might be a bit more precise since some are these can be PROP_DIRECTION, PROP_TRANSLATION, ...) To not make this a "dupli-report" with multiple issues, it would probably be best to report this separately though (you can already subscribe/ping me there if you do so since I have the possible fix ready). The original issue (source property affected) is caused by the fact that holding `ALT` will trigger the behavior of "multi-button-editing" (so it tries to copy the value - with offset - to other selected nodes), this should of course not happen on pasting, fix for that is incoming... > more weird things with shader vector add… > Something messed a lot under the hood This has the same reasons ("multi-button-editing" falsely triggered), the difference in your video is not blender versions but the fact that in 3.3.6 you have the node on the right hand side selected [so no node to copy to], in 3.6 you have the node on the left hand side selected [then the copying takes place]
Member

Btw.: the simple workaround for now is to copy from a button, then select only the node you want to paste to, then paste.

Btw.: the simple workaround for now is to copy from a button, **then select only the node you want to paste to**, then paste.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-07 11:19:14 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108096
No description provided.